fix: improve some mistakes in index.html

--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
               </h5>
             </div>
             <div class="projects">
-              <p>Luxe Limited Online Shop by OpenCard - ahttps://www.luxelimited.vip/</p>
-              <p>Natemia Online Shop by Shopify - https://natemia.com/products/baby-brush-set</p>
-              <p>CV Project Link from GitHub - https://syunehovan.github.io/rsschool-cv/cv</p>
+              <p>Luxe Limited Online Shop by OpenCard - <a href="https://www.luxelimited.vip/">https://www.luxelimited.vip/</a></p>
+              <p>Natemia Online Shop by Shopify - <a href="https://natemia.com/products/baby-brush-set">https://natemia.com/products/baby-brush-set</a></p>
+              <p>CV Project Link from GitHub - <a href="https://syunehovan.github.io/rsschool-cv/cv">https://syunehovan.github.io/rsschool-cv/cv</a></p>
             </div>
           </div>
         </div>
